Bug 112294 - "Place in margins" Print Comment Section active and cannot be changed if document with comments printed and then comments removed
Summary: "Place in margins" Print Comment Section active and cannot be changed if docu...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: implementationError
Depends on:
Blocks: Print-Dialog
  Show dependency treegraph
 
Reported: 2017-09-08 17:10 UTC by stephan
Modified: 2019-09-21 12:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
no comments but comments section for printing (33.64 KB, image/png)
2017-09-08 17:14 UTC, stephan
Details
Print Dialog from Print Preview without any content (36.12 KB, image/png)
2017-09-09 08:47 UTC, stephan
Details
Print Dialog from Document with content (48.94 KB, image/png)
2017-09-09 08:49 UTC, stephan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stephan 2017-09-08 17:10:33 UTC
Description:
Writer will scale document on print to show comments on right side. But on Documents with no comments this layout will still exists and comment field on print window is disabled. 

Steps to Reproduce:
1. create first document with comments.
2. print it by activete comments to right side
3. create new document without comments
4. print it

Actual Results:  
area of right side still exists for comments but no possiblity to disable comments for printing

Expected Results:
if no comments, no area for printing comments should be for printing



Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36
Comment 1 stephan 2017-09-08 17:14:45 UTC
Created attachment 136124 [details]
no comments but comments section for printing
Comment 2 Dieter 2017-09-08 21:43:51 UTC Comment hidden (obsolete)
Comment 3 Dieter 2017-09-09 08:38:43 UTC Comment hidden (obsolete)
Comment 4 stephan 2017-09-09 08:47:54 UTC
Created attachment 136131 [details]
Print Dialog from Print Preview without any content
Comment 5 stephan 2017-09-09 08:49:14 UTC
Created attachment 136132 [details]
Print Dialog from Document with content
Comment 6 stephan 2017-09-09 08:49:32 UTC
Think i found the mistake:
maybe i set the comment print property in options / writer / printing.
But if i could set it there, is it also a good idea to enable this property on printing dialog, also if there are no comments?
A Problem also, if i change it back in options / writer / printing to no comments, the property in printing dialog still be on printing comments. Only after writer restart it will set

And there is a second strange behavier:
if i set in options / writer / printing the comment print property to border, the print previews of the printing dialogs looking different. If i open the print window from document, the document will be shown, but if i open it from print preview a empty document will be shown. Have a look at the added pictures.
Comment 7 Dieter 2017-09-09 10:47:37 UTC Comment hidden (obsolete)
Comment 8 stephan 2017-09-10 09:01:47 UTC Comment hidden (obsolete)
Comment 9 Xisco Faulí 2017-09-11 08:23:21 UTC Comment hidden (obsolete)
Comment 10 Dieter 2017-09-11 10:20:09 UTC
(In reply to Xisco Faulí from comment #9)
> Moving it back to UNCONFIRMED until someone else confirms it.

I could reproduce it (see comment 7).

Steps:
1. Open a document with comments or add comments to a new document
2. Open File -> Print
3. Select Print Comments "Place in margins"
4. Print the document or cancel print dialog
5. Delete all comments
6. Open File -> Print

Result:
Print comments "Place in margin" is selected and can't be changed.
Comment 11 Timur 2018-08-28 15:44:30 UTC
Repro 6.2+.
Looks like there's a new bug "7. Try to print, print dialog won't appear" but this one remains.
Comment 12 Xisco Faulí 2018-11-27 12:13:45 UTC
Dear Daniel Silva,
This bug has been in ASSIGNED status for more than 3 months without any
activity. Resetting it to NEW.
Please assigned it back to yourself if you're still working on this.
Comment 13 Commit Notification 2018-11-29 16:02:38 UTC
Daniel Silva committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e1bb5b2cd8ecc4db760b1d413e28edc388da5c3e%5E%21

tdf#112294 fix comments listbox selection in writer print dialog

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Daniel Silva 2018-11-30 16:37:27 UTC
Dear Xisco,

This bug was already solved in my feature branch, but it seems we took a very long time to merge it to master. I am sorry for any inconvenience I may have caused.
Comment 15 Dieter 2019-09-21 12:10:45 UTC
Verified with

Version: 6.3.2.2 (x64)
Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded