tdf#112294 fix comments listbox selection in writer print dialog

Change-Id: I5e2362f22df9a1ad6b36313f306e7642591b615a